--- a/Homework_0.ipynb
+++ b/Homework_0.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,10 +46,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x23e2efa40e0>"
+       "<matplotlib.image.AxesImage at 0x2459181d4c0>"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "Text(0.5, 1.0, 'Rotated Image')"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "True"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
